; ModuleID = '/home/carl/AnghaBench/vlc/src/darwin/extr_thread.c_vlc_clone_attr.c'
source_filename = "/home/carl/AnghaBench/vlc/src/darwin/extr_thread.c_vlc_clone_attr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGHUP = common dso_local global i32 0, align 4
@SIGINT = common dso_local global i32 0, align 4
@SIGQUIT = common dso_local global i32 0, align 4
@SIGTERM = common dso_local global i32 0, align 4
@SIGPIPE = common dso_local global i32 0, align 4
@SIG_BLOCK = common dso_local global i32 0, align 4
@SIG_SETMASK = common dso_local global i32 0, align 4
@VLC_STACKSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8* (i8*)*, i8*, i32)* @vlc_clone_attr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlc_clone_attr(i32* %0, i32* %1, i8* (i8*)* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8* (i8*)*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* (i8*)* %2, i8* (i8*)** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %14 = call i32 @sigemptyset(i32* %13)
  %15 = load i32, i32* @SIGHUP, align 4
  %16 = call i32 @sigdelset(i32* %13, i32 %15)
  %17 = load i32, i32* @SIGINT, align 4
  %18 = call i32 @sigaddset(i32* %13, i32 %17)
  %19 = load i32, i32* @SIGQUIT, align 4
  %20 = call i32 @sigaddset(i32* %13, i32 %19)
  %21 = load i32, i32* @SIGTERM, align 4
  %22 = call i32 @sigaddset(i32* %13, i32 %21)
  %23 = load i32, i32* @SIGPIPE, align 4
  %24 = call i32 @sigaddset(i32* %13, i32 %23)
  %25 = load i32, i32* @SIG_BLOCK, align 4
  %26 = call i32 @pthread_sigmask(i32 %25, i32* %13, i32* %12)
  %27 = load i32, i32* %10, align 4
  %28 = load i32*, i32** %7, align 8
  %29 = call i32 @pthread_attr_setstacksize(i32* %28, i32 1048576)
  store i32 %29, i32* %11, align 4
  %30 = load i32, i32* %11, align 4
  %31 = icmp eq i32 %30, 0
  %32 = zext i1 %31 to i32
  %33 = call i32 @assert(i32 %32)
  %34 = load i32*, i32** %6, align 8
  %35 = load i32*, i32** %7, align 8
  %36 = load i8* (i8*)*, i8* (i8*)** %8, align 8
  %37 = load i8*, i8** %9, align 8
  %38 = call i32 @pthread_create(i32* %34, i32* %35, i8* (i8*)* %36, i8* %37)
  store i32 %38, i32* %11, align 4
  %39 = load i32, i32* @SIG_SETMASK, align 4
  %40 = call i32 @pthread_sigmask(i32 %39, i32* %12, i32* null)
  %41 = load i32*, i32** %7, align 8
  %42 = call i32 @pthread_attr_destroy(i32* %41)
  %43 = load i32, i32* %11, align 4
  ret i32 %43
}

declare dso_local i32 @sigemptyset(i32*) #1

declare dso_local i32 @sigdelset(i32*, i32) #1

declare dso_local i32 @sigaddset(i32*, i32) #1

declare dso_local i32 @pthread_sigmask(i32, i32*, i32*) #1

declare dso_local i32 @pthread_attr_setstacksize(i32*, i32) #1

declare dso_local i32 @assert(i32) #1

declare !callback !2 dso_local i32 @pthread_create(i32*, i32*, i8* (i8*)*, i8*) #1

declare dso_local i32 @pthread_attr_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
